# adsyslib

./: .dockerignore  ABOUT  Dockerfile.alpine  Dockerfile.rhel  Dockerfile.test  OAUTH_INTEGRATION.md  README.md  REVIEW_SUMMARY.md  pyproject.toml
skills/adsys_admin/: SKILL.md
skills/adsys_admin/examples/: web_setup.py
src/adsyslib/: __init__.py  core.py  interact.py  io_utils.py  logger.py
src/adsyslib.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/adsyslib/authentik/: __init__.py  client.py  oauth.py
src/adsyslib/cli/: main.py
src/adsyslib/cli/commands/: __init__.py  authentik_cmd.py  cloud_cmd.py  container_cmd.py  iac_cmd.py  pkg_cmd.py  run_cmd.py
src/adsyslib/cloud/: __init__.py  aws.py  base.py  oracle.py
src/adsyslib/container/: __init__.py  builder.py  manager.py
src/adsyslib/iac/: __init__.py  ansible.py  terraform.py
src/adsyslib/k8s/: __init__.py  kubectl.py
src/adsyslib/keycloak/: __init__.py  client.py  migrate.py
tests/: test_core.py  test_io_utils.py
