[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adsyslib"
version = "0.1.0"
authors = [
  { name="Ryan", email="ryan@example.com" },
]
description = "A powerful system administration library for Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3>=1.34.0",
    "oci>=2.119.0",
    "docker>=7.0.0",
    "pexpect>=4.9.0",
    "sh>=2.0.0",
    "requests>=2.31.0",
    "rich>=13.7.0",  # For pretty output/logging
    "typer>=0.9.0",  # For CLI
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "isort",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
adsys = "adsyslib.cli.main:app"
